@@ -1765,7 +1765,7 @@ static int worker_pre_config(apr_pool_t *pconf, apr_pool_t *plog,
                              apr_pool_t *ptemp)
 {
     static int restart_num = 0;
-    int no_detach, debug;
+    int no_detach, debug, foreground;
     ap_directive_t *pdir;
     ap_directive_t *max_clients = NULL;
     apr_status_t rv;
@@ -1809,18 +1809,19 @@ static int worker_pre_config(apr_pool_t *pconf, apr_pool_t *plog,
     debug = ap_exists_config_define("DEBUG");
 
     if (debug) {
-        no_detach = one_process = 1;
+        foreground = one_process = 1;
     }
     else {
         one_process = ap_exists_config_define("ONE_PROCESS");
         no_detach = ap_exists_config_define("NO_DETACH");
+        foreground = ap_exists_config_define("FOREGROUND");
     }
 
     /* sigh, want this only the second time around */
     if (restart_num++ == 1) {
         is_graceful = 0;
 
-        if (!one_process) {
+        if (!one_process && !foreground) {
             rv = apr_proc_detach(no_detach ? APR_PROC_DETACH_FOREGROUND
                                            : APR_PROC_DETACH_DAEMONIZE);
             if (rv != APR_SUCCESS) {
